--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
+<!-- Facebook Pixel Code -->
+<script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '674397723380614');
+  fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=674397723380614&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Facebook Pixel Code -->
 <!doctype html>
 <html lang="en">
   <head>
@@ -95,12 +112,12 @@ h1{font-size: 30px;margin-top: 10px;font-weight: 900;}
 </script>
 <!-- Пиксель Facebook -->
     <script type="text/javascript">
-        //var url = "tg:\/\/join?invite=";
+        var url = "tg:\/\/join?invite=";
 
-        //setTimeout(function() {
-		//	fbq('track', 'Lead');
-        //    window.location = url;			
-        //}, 500);
+        setTimeout(function() {
+			fbq('track', 'Lead');
+           window.location = url;			
+        }, 500);
     </script>
 
   </body>
