--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ h1{font-size: 30px;margin-top: 10px;font-weight: 900;}
 </script>
 <!-- Пиксель Facebook -->
     <script type="text/javascript">
-        var url = "tg:\/\/join?invite=";
+        var url = "https://t.me/betochka";
 
         setTimeout(function() {
 			fbq('track', 'Lead');
